# constraint-list-colouring

./: Makefile  README.md  pyproject.toml
src/: petersen-edge.py  petersen-node.py  petersen-total.py
