[tool.poetry]
name = "constraint-list-colouring"
version = "0.1.0"
description = "Constraint-based list-colouring in Python with vizing."
authors = ["Matthew Henderson <matthew.james.henderson@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
networkx = "^3.4.2"
vizing = {git = "https://github.com/MHenderson/vizing"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
